# fast_whitespace_collapse

./: Cargo.toml  LICENSE  README  README.md
benches/: collapse.rs
src/: lib.rs
