[package]
name = "fast_whitespace_collapse"
version = "0.1.0"
edition = "2021"
authors = ["Nikita Madebeykin"]
license = "MIT"
description = "Collapse consecutive spaces and tabs into a single space using SIMD"
repository = "https://github.com/digitalcortex/fast_whitespace_collapse"
readme = "README.md"
keywords = ["whitespace", "collapse", "simd"]
categories = ["text-processing"]

[lib]
name = "fast_whitespace_collapse"
path = "src/lib.rs"

[dependencies]
wide = { version = "0.7.32", optional = true }

[dev-dependencies]
collapse = "0.1.2"
criterion = "0.5.1"
regex = "1.11.1"

[[bench]]
name = "collapse"
harness = false

[features]
simd-optimized = ["dep:wide"]  # Enables SIMD (`u8x16`) using `wide`
default = ["simd-optimized"]  # Enable SIMD by default
